--- a/Android-Social-Player-App/bin/AndroidManifest.xml
+++ b/Android-Social-Player-App/bin/AndroidManifest.xml
@@ -25,7 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name="com.example.musicplayer.MusicService" />
+        <service android:name="com.example.android_social_player.MusicService" />
     </application>
 
 </manifest>
