--- a/Android-Social-Player-App/AndroidManifest.xml
+++ b/Android-Social-Player-App/AndroidManifest.xml
@@ -10,6 +10,7 @@
 	
     <!-- permission to let music play back continue when the user's device becomes idle -->
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
