--- a/Android-Social-Player-App/bin/AndroidManifest.xml
+++ b/Android-Social-Player-App/bin/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <!-- permission to let music play back continue when the user's device becomes idle -->
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <!-- permissions for WIFI P2P -->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
@@ -27,19 +28,27 @@
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:screenOrientation="portrait" >
+            
+        </activity>
+        <activity
+            android:name="wifi.DiscoverDevices"
+            android:label="@string/title_activity_discover_devices"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="com.example.android_social_player.SuperMainActivity"
+            android:label="@string/title_activity_super_main"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        
         <service android:name="com.example.android_social_player.MusicService" />
-
-        <activity
-            android:name="wifi.DiscoverDevices"
-            android:label="@string/title_activity_discover_devices" >
-        </activity>
     </application>
 
 </manifest>
